# reverbationTime

./: .gitignore  .vscode-ctags  CMakeLists.txt  INSTALL.md  LICENSE  README.md  analyze.sh  build.sh  run.sh  test.sh
docs/: INSTALL.md  TESTING.md
reverbationPlot/: CMakeLists.txt  run.sh
reverbationPlot/src/: main.cpp  statsMain.cpp
reverbationPlot/src/buildingFiles/: gnuplot.sh  moveFromSrc.sh
reverbationPlot/src/headers/: myFile.h
reverbationPlot/src/libs/: myFile.cpp
reverbationPlot/src/temp/: fileAproximation.txt  fileColumnRemove.txt  fileCutFromLine.txt  fileFabs.txt  fileLogCopy.txt  fileShortenOrdered.txt
reverbationTime/: run.sh
reverbationTime/src/: main.cpp  statsMain.cpp
reverbationTime/src/headers/: myFile.h
reverbationTimeBuilt/src/buildingFiles/: Makefile  rename.sh
reverbationTimeBuilt/src/headers/: stats.h
src/: main.cpp  statsMain.cpp  stats_main.cpp
src/buildf/: Makefile  analyze.sh  clear.sh  createDat.sh  dat_create.sh  gnuplot.sh  moveFromSrc.sh  mvsrc.sh  rename.sh
src/buildingFiles/: gnuplot.sh
src/headers/: myFile.h  surface.h
src/inc/: cutom_paths.h  txt_file.h
src/lib/: txt_file.cpp
src/libs/: myFile.cpp  stats.cpp  surface.cpp
test/: CMakeLists.txt  test.cpp  write_match.txt
